<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IcpExecuteActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/icpStatusTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/gris_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutIcpExecute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textTipoOperacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoOperacionIcp"
            android:textColor="@color/gris_texto"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Spinner
            android:id="@+id/spinnerTipoOperacion"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/borde_radio_group" />

        <TextView
            android:id="@+id/textOperacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operacionIcp"
            android:textColor="@color/gris_texto"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Spinner
            android:id="@+id/spinnerOperacion"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/borde_radio_group" />

    </LinearLayout>

    <!-- Contenedor para ProgressBar y texto -->
    <include
        android:id="@+id/progressContainer"
        layout="@layout/overlay_progress" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="116dp"
        android:contentDescription="@string/next"
        android:src="@android:drawable/ic_media_next"
        android:background="@drawable/circle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutIcpExecute"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/gris_texto" />

</androidx.constraintlayout.widget.ConstraintLayout>