<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerContratoActivity">

    <LinearLayout
        android:id="@+id/layoutBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15sp"
            android:text="@string/tarifContract"
            android:textColor="@color/gris_texto"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinnerContrato"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- Contenedor para ProgressBar y texto -->
    <include
        android:id="@+id/progressContainer"
        layout="@layout/overlay_progress" />

    <LinearLayout
        android:id="@+id/btnNextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15sp"
            android:text="@string/verContract"
            android:textColor="@color/gris_texto"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/next"
            android:src="@android:drawable/ic_media_next"
            app:tint="@color/gris_texto" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>