<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/configMenu"
        android:textSize="27sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- FILA 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="24dp">

            <!-- ICONO 1 -->
            <LinearLayout
                android:id="@+id/btnFtpStg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="0dp"
                    android:src="@drawable/ftp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ftpStg"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- ICONO 2 -->
            <LinearLayout
                android:id="@+id/btnStg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="0dp"
                    android:src="@drawable/stg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stg"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <!-- FILA 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- ICONO 3 -->
            <LinearLayout
                android:id="@+id/btnContador"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="0dp"
                    android:src="@drawable/passw" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cnt"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- ICONO 4 -->
            <LinearLayout
                android:id="@+id/btnAppLog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="0dp"
                    android:src="@drawable/applog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appLog"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>